--- a/src/templates/header/home.hbs
+++ b/src/templates/header/home.hbs
@@ -1,8 +1,10 @@
-<form class="film-search" action="" data-index="form">
-    <input class="film-search-input" type="text" placeholder="Поиск фильмов"
-        autocomplete="off" /><i class="material-icons white search-icon">search</i>
+<form class="film-search" action="">
+    <input class="film-search-input" 
+    type="text" 
+    placeholder="Search films"
+     autocomplete="off" />
+     <i class="material-icons white search-icon">search</i>
     <p>
         <!-- fetch status -->
     </p>
-    <ul></ul>
 </form>
