--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,26 +13,28 @@
     </div>
   </nav>
   <div data-index="headerContent">
-    
-    <form class="film-search">
+    <form class="film-search" action="">
       <input
         class="film-search-input"
         type="text"
         placeholder="Search films"
         autocomplete="off"
-      /><i class="material-icons material-icons-search">search</i>
+      /><i class="material-icons white search-icon">search</i>
       <p>
         <!-- fetch status -->
       </p>
     </form>
+<!--     
     <div class="btn-container is-hidden">
       <button class="lib-btn btn watched current__myLibraryBtn" data-index="watched">Watched</button>
       <button class="lib-btn btn queue" data-index="queue">Queue</button>
-<!-- <div class="myLibraryButtons">
-  <button class="btn-lib" data-index="watched">WATCHED</button>
-  <button class="btn-lib" data-index="queue">QUEUE</button>
-</div> -->
+    </div> -->
 
-    </div>
+    <!-- <div class="myLibraryButtons">
+      <button class="btn-lib" data-index="watched">WATCHED</button>
+      <button class="btn-lib" data-index="queue">QUEUE</button>
+    </div> -->
+
   </div>
+</div>
 </div>
