--- a/src/templates/header/myLibery.hbs
+++ b/src/templates/header/myLibery.hbs
@@ -1,4 +1,8 @@
-<div class="myLibraryButtons">
+{{!-- <div class="myLibraryButtons">
     <button class="btn-lib" data-index="watched">WATCHED</button>
     <button class="btn-lib" data-index="queue">QUEUE</button>
-</div>
+</div> --}}
+
+<div class="btn-container is-hidden">
+    <button class="lib-btn btn watched current__myLibraryBtn" data-index="watched">Watched</button>
+    <button class="lib-btn btn queue" data-index="queue">Queue</button> 
