add stylesadd to modal

--- a/src/templates/movieDetail.hbs
+++ b/src/templates/movieDetail.hbs
@@ -21,7 +21,7 @@
     <p class='modal-card__details'>Original Title
       <span class='modal-card__original-title'>{{original_title}}</span></p>
 
-    <p class='modal-card__details'>Genre
+    <p class='modal-card__details'><span class='modal-card__details-genre'>Genre</span> 
       {{#each genres}}<span class='modal-card__details-attribute modal-card__genre'>
           {{name}}
         </span>{{/each}}</p>
