--- a/src/sass/layout/index/_fullPosterFilm.scss
+++ b/src/sass/layout/index/_fullPosterFilm.scss
@@ -30,14 +30,14 @@
   position: absolute;
   top: 20px;
   left: 50%;
-  margin: 0px;
+  margin: 0;
 
   width: 280px;
   background-color: $white;
   transform: translateX(-50%) scale(1);
 
   @include for-size(tablet) {
-    top: 231px;
+    top: 276px;
     width: 618px;
   }
   @include for-size(desktop) {
@@ -45,50 +45,24 @@
     width: 882px;
   }
 }
-// .lightbox__button {
-//   position: absolute;
-//   top: 38px;
-//   right: 38px;
-//   display: flex;
-//   width: 14px;
-//   height: 14px;
-//   padding: 0;
-//   margin: 0;
-//   border: none;
-//   background-color: gray;
-//   cursor: pointer;
-//   outline: none;
-//   background-repeat: no-repeat;
-//   background-image: url('../images/close_main.svg');
-// }
 .lightbox__button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 18px;
+  right: 18px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  padding: 8;
+  width: 28px;
+  height: 28px;
+  padding: 0;
   margin: 0;
   border: none;
-  border-radius: 50%;
+  background-image: url('../images/close.svg');
   background-color: transparent;
-  color: #fff;
   cursor: pointer;
-  // transition: background-color var(--animation-duration) var(--timing-function);
   outline: none;
-  background-image: url('../images/close_main.svg');
-  background-position: center;
-  // background-size: 60%;
-  // background-repeat: no-repeat;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-// .lightbox__button:hover,
-// .lightbox__button:focus {
-//   background-color: rgba(0, 0, 0, 0.5);
-// }
 .modal-card {
   width: 240px;
   padding: 48px 20px;
@@ -209,13 +183,18 @@
   }
 }
 .modal-card__genre {
-  margin-left: 78px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
+}
+.modal-card__details-genre {
+  margin-right: 76px;
+  margin-bottom: 0;
+  display: inline-block;
   @include for-size(desktop) {
-    margin-left: 120px;
+    margin-right: 120px;
   }
 }
 .modal-card__about {
+  margin-top: 20px;
   margin-bottom: 10px;
   font-family: Roboto;
   font-style: normal;
@@ -284,9 +263,4 @@
 }
 .modal-buttons-wrapper {
   display: inline-flex;
-}
-
-.no-scrolling {
-  height: 100%;
-  overflow: hidden;
 }
