Irina obnovite vetku dev
idet staryj kod na prodact

--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -25,6 +25,9 @@
   &-search {
     position: absolute;
     right: 50px;
+    @include for-size(tablet) {
+      right: -55px;
+    }
     top: 0;
   }
 
