--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
         type="text"
         placeholder="Search films"
         autocomplete="off"
-      /><i class="material-icons white search-icon">search</i>
+      /><i class="material-icons material-icons-search">search</i>
       <p>
         <!-- fetch status -->
       </p>
