add switch but need to fix

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/base';
 
 // ===========  INDEX block
+@import './layout/index/switchTime';
 @import './components/spinner';
 @import './layout/index/filmCards';
 @import './layout/index/fullPosterFilm';
