выводит разметку массивов по кнопкам wathed и queue

--- a/src/templates/header/myLibery.hbs
+++ b/src/templates/header/myLibery.hbs
@@ -4,5 +4,5 @@
 </div> --}}
 
 <div class="btn-container is-hidden">
-    <button class="lib-btn btn watched current__myLibraryBtn" data-index="watched">Watched</button>
+    <button class="lib-btn btn wathed current__myLibraryBtn" data-index="watched">Watched</button>
     <button class="lib-btn btn queue" data-index="queue">Queue</button> 
