--- a/src/templates/header/myLibrary.hbs
+++ b/src/templates/header/myLibrary.hbs
@@ -1,4 +1,4 @@
 <div class="myLibraryButtons">
-    <button class="btn-lib" data-index="watched">WATCHED</button>
-    <button class="btn-lib" data-index="queue">QUEUE</button>
+    <button class="btn-lib watched" data-index="watched">WATCHED</button>
+    <button class="btn-lib queue" data-index="queue">QUEUE</button>
 </div>
