--- a/src/sass/layout/index/_fullPosterFilm.scss
+++ b/src/sass/layout/index/_fullPosterFilm.scss
@@ -237,6 +237,11 @@
     width: 136px;
   }
 }
+
+.addedWatched-btn {
+  background: #b8a190;
+}
+
 .modal-card__queue-btn {
   margin: 0;
   width: 112.58px;
@@ -262,6 +267,11 @@
     width: 136px;
   }
 }
+
+.addedQueue-btn {
+  background: #b8a190;
+}
+
 .modal-buttons-wrapper {
   display: inline-flex;
 }
