fix pagination in library and add transform on images

--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -32,6 +32,10 @@
     width: 274px;
     height: 398px;
   }
+  &:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
 }
 
 .container {
