--- a/src/sass/layout/index/_switchTime.scss
+++ b/src/sass/layout/index/_switchTime.scss
@@ -63,7 +63,7 @@
   z-index: 2;
   pointer-events: none;
   box-shadow: 0 1px 1px rgba(71, 67, 67, 0.25);
-  transform: translateX(3px);
+  // transform: translateX(3px);
   transition: transform 250ms var(--timing-function);
   outline: none;
 }
@@ -73,7 +73,7 @@
 // }
 
 .time-switch__toggle:checked ~ .time-switch__marker {
-  transform: translateX(35px);
+  transform: translateX(45px);
 }
 
 .time-switch__toggle:focus + .time-switch__track,
