--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 // ===========  INDEX block
 @import './layout/index/switchTime';
 @import './components/spinner';
+@import './components/btnScroll';
 @import './layout/index/filmCards';
 @import './layout/index/fullPosterFilm';
 @import './layout/index/libraryFilm';
