--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -206,7 +206,7 @@
 .current {
   &::after {
     position: absolute;
-    bottom: 15;
+    // bottom: 15px;
     content: '';
     display: block;
     width: 100%;
