--- a/src/partials/swichTime.html
+++ b/src/partials/swichTime.html
@@ -1,6 +1,6 @@
-  <!-- Разметка переключателя Week - Day -->
+<!-- Разметка переключателя Week - Day -->
 <div class="toolbar_time">
-  <p class="time-name">Top of the</p>
+  <p class="time-name">Top films</p>
   <div class="time-switch">
     <p class="week-time">Week</p>
     <div class="time-switch__control">
