--- a/src/sass/layout/index/_switchTime.scss
+++ b/src/sass/layout/index/_switchTime.scss
@@ -63,7 +63,7 @@
   z-index: 2;
   pointer-events: none;
   box-shadow: 0 1px 1px rgba(71, 67, 67, 0.25);
-  // transform: translateX(3px);
+  transform: translateX(4px);
   transition: transform 250ms var(--timing-function);
   outline: none;
 }
