add fonts and material-icons

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,5 +1,7 @@
 // ===========  BASE block
 
+@import './colors';
+@import './fonts';
 @import './variables';
 @import './mixins';
 @import './container';
