--- a/src/sass/layout/index/_pagination.scss
+++ b/src/sass/layout/index/_pagination.scss
@@ -17,8 +17,8 @@
   }
 }
 .pagenumbers {
-  display: flex;
-  flex-wrap: wrap;
+  display: inline-flex;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   button {
@@ -67,8 +67,8 @@
   }
 }
 .pagination__container_pages {
-  display: flex;
-  flex-wrap: wrap;
+  display: inline-flex;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
 }
