logo color transition

--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -160,6 +160,10 @@
     font-weight: 500;
     font-size: 30px;
     color: $white;
+    &:hover {
+      transition:3s;
+      color: $accent-text;
+    }
   }
 
   .film-search-input-error {
