--- a/src/sass/layout/index/_fullPosterFilm.scss
+++ b/src/sass/layout/index/_fullPosterFilm.scss
@@ -254,8 +254,10 @@
   @include for-size(desktop) {
     width: 136px;
   }
+  transition: background, color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     background: #ff6b01;
+    color: $white;
   }
 }
 .modal-card__queue-btn {
@@ -282,8 +284,10 @@
   @include for-size(desktop) {
     width: 136px;
   }
+  transition: background, color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     background: #ff6b01;
+    color: $white;
   }
 }
 .modal-buttons-wrapper {
