add transitions to header btns

--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -274,6 +274,7 @@
   box-sizing: border-box;
   border-radius: 5px;
   background: transparent;
+  transition: background-color, transform, color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     background-color: $accent-icon;
