--- a/src/sass/layout/index/_fullPosterFilm.scss
+++ b/src/sass/layout/index/_fullPosterFilm.scss
@@ -258,6 +258,7 @@
   &:hover {
     background: #ff6b01;
     color: $white;
+    cursor: pointer;
   }
 }
 .modal-card__queue-btn {
@@ -288,6 +289,7 @@
   &:hover {
     background: #ff6b01;
     color: $white;
+    cursor: pointer;
   }
 }
 .modal-buttons-wrapper {
