--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -40,14 +40,14 @@
 }
 
 .container {
-  @include for-size(phone) {
-    width: 280px;
-  }
+  // @include for-size(phone) {
+  //   width: 280px;
+  // }
   @include for-size(tablet) {
-    width: 618px;
+    width: 768px;
   }
   @include for-size(desktop) {
-    width: 882px;
+    width: 1024px;
   }
 }
 .movie-title {
