--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -1,4 +1,10 @@
 //Gallery Films
+.movies {
+  padding-top: 10px;
+  @media screen and (min-width: 768px) {
+    padding-top:30px;
+  }
+}
 .gallery {
   @include flexBox($w: wrap, $jc: start);
 }
