--- a/src/sass/layout/index/_switchTime.scss
+++ b/src/sass/layout/index/_switchTime.scss
@@ -1,5 +1,8 @@
 .toolbar_time {
-  padding: 10px;
+  // position: relative;
+  // top: 5px;
+  padding-bottom: 30px;
+  padding-right: 20px;
 }
 .time-switch {
   display: flex;
