--- a/src/sass/layout/footer/_footer.scss
+++ b/src/sass/layout/footer/_footer.scss
@@ -13,6 +13,7 @@
   &-page {
     // margin: 0 auto;
     padding-top: 30px;
+    padding-bottom: 28px;
     height: 100px;
     @include for-size(tablet) {
       @include flexBox();
