--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -28,32 +28,31 @@
 
   @include for-size(phone) {
     width: 280px;
-    // height: 402px;
+    height: 402px;
   }
   @include for-size(tablet) {
     width: 294px;
-    // height: 398px;
+    height: 398px;
   }
   @include for-size(desktop) {
     width: 274px;
-    // height: 398px;
+    height: 398px;
   }
   &:hover {
-    transition: 0.25s;
     transform: scale(1.05);
     cursor: pointer;
   }
 }
 
 .container {
-  // @include for-size(phone) {
-  //   width: 280px;
-  // }
+  @include for-size(phone) {
+    width: 280px;
+  }
   @include for-size(tablet) {
-    width: 768px;
+    width: 618px;
   }
   @include for-size(desktop) {
-    width: 1024px;
+    width: 882px;
   }
 }
 .movie-title {
