--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -6,7 +6,13 @@
   }
 }
 .gallery {
-  @include flexBox($w: wrap, $jc: start);
+    @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+//   @include flexBox($w: wrap, $jc: start);
 }
 
 .movie-card {
@@ -28,6 +34,7 @@
 
   @include for-size(phone) {
     width: 280px;
+    // height: 402px;
   }
   @include for-size(tablet) {
     width: 294px;
@@ -38,6 +45,7 @@
     height: 398px;
   }
   &:hover {
+    transition: 0.25s;
     transform: scale(1.05);
     cursor: pointer;
   }
