--- a/src/sass/layout/index/_pagination.scss
+++ b/src/sass/layout/index/_pagination.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 50px;
   padding-bottom: 60px;
   .list {
     width: 100%;
