add message and fix

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,15 +14,13 @@
   </nav>
   <div data-index="headerContent">
     <form class="film-search">
-      <input
-        class="film-search-input"
-        type="text"
-        placeholder="Search films"
-        autocomplete="off"
-      /><i class="material-icons material-icons-search">search</i>
-      <p>
-        <!-- fetch status -->
+      <input class="film-search-input" type="text" placeholder="Search films" autocomplete="off" /><i
+        class="material-icons material-icons-search">search</i>
+
+      <!-- fetch status -->
       </p>
     </form>
+    <p class="js-message"></p>
   </div>
+
 </div>
