--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -288,3 +288,9 @@
 .active {
   background-color: $accent-icon;
 }
+.js-message {
+  text-align: center;
+}
+.film-search {
+  margin-bottom: 22px;
+}
