--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -25,7 +25,7 @@
 
   &-search {
     position: absolute;
-    right: 28px;
+    right: 0;
     top: 0;
   }
 
@@ -44,7 +44,7 @@
   margin-bottom: 22px;
 
   &-input {
-    width: 90%;
+    width: 100%;
     color: $white;
     background: transparent;
     border: transparent;
