--- a/src/sass/layout/footer/_footer.scss
+++ b/src/sass/layout/footer/_footer.scss
@@ -1,4 +1,6 @@
 .footer {
+  position: sticky; 
+  bottom: 0;
   background-color: $page-footer-color;
   color: $secondary-text-color;
   font-weight: 400;
